--- a/generic.html
+++ b/generic.html
@@ -79,7 +79,7 @@
 										<img src = "images/imagenes analisis/prediccion.png" width="400px" height = "250px" style="position: relative; left: 10px;"></a>
 								<p>Podemos observar a su vez que por más que categorize correctamente la mayoría de imágenes falla ya que siempre se tiene un margen de error, para saber la magnitud de este a través de las métricas que se pueden extraer de este.</p>
 								<h2><b>Metricas de la red</b></h2>
-								<p>Cep Tempus adipiscing arcu.</p><a>
+								<p>La mejor manera para notar la precisión de la red es a través de una matriz de confusión, la cual nos muestra los casos en que la predicción coincide con el valor real y cuando no, muestra que predicción se hace en su lugar. Permite identificar con qué datos en específico llega a presentar errores. Además, de otros factores a evaluar cómo la exhaustividad (La cantidad de datos que es capaz de identificar), la precisión y el soporte (La cantidad de casos de cada clase en los datos de prueba.)</p><a>
 								<img src = "images/imagenes analisis/confucion.png" width="250px" height = "250px" style="position: relative; left: 10px;"></a>
 								<img src = "images/imagenes analisis/estadisticas.png" width="250px" height = "250px" style="position: relative; left: 10px;"></a>
 							</section>
