--- a/generic.html
+++ b/generic.html
@@ -47,7 +47,7 @@
 									<h2><b>Transformación</b></h2>
 										<p>Posterior mente transformamos los datos para que puedan ser procesados por la red neuronal. Primero convertimos el arreglo de 8x8 a una lista de 64 pixeles. Después le damos forma al conjunto de datos en un arreglo que sea (n_imagen,n_pixel).</p>
 									<h2><b>División</b></h2>
-										<p>Para que la red funcione necesita ser entrenada y probada, por ello el conjunto de datos en dos uno de pruebas y otro de entrenamiento. Por ello dividimos los datos en 50% para ambos y de la forma (X_train, y_train) y (X_test, y_test).</p>
+										<p>Para que la red funcione necesita ser entrenada y probada con datos, por ello el conjunto de datos se divide en dos uno de pruebas y otro de entrenamiento. Por ello dividimos los datos en 50% para ambos y de la forma (X_train, y_train) y (X_test, y_test).</p>
 										<a><img src = "https://thumbs.dreamstime.com/b/el-por-ciento-gr%C3%A1fico-de-sectores-de-gris-azul-y-del-blanco-infographics-del-vector-del-porcentaje-ejemplo-del-negocio-del-86867736.jpg" width="200px" height = "200px" style="position: relative; left: 10px;"></a>
 								<h1><b>Funcionamiento de la red neuronal</b></h1>
 										<p>Por las características de SVM (support vector machine) se crea una red donde los datos de entrada pasan por una neurona de base radia que la modifica y posteriormente esos datos se les asigna un peso, para tomarlos en cuenta en la sumatoria final. Que en el caso de SVC (support vector classification) según el sesgo establecido lo clasificara de un modo u otro.</p>
