--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 								</header>
 								<ul class="features">
 									<li>
-										<a href="reconocimiento_imagenes.html"><img class="Imgen" src="https://blog.laboralkutxa.com/src/uploads/2018/05/Reconocimiento-facial.jpg" height="260px" width="280px"  alt=""></a>
+										<a href="reconocimiento_imagenes.html"><img class="Imgen" src="https://blog.laboralkutxa.com/src/uploads/2018/05/Reconocimiento-facial.jpg" height="260px" width="280px" style="border-radius: 100%"  alt=""></a>
 										<h3>Reconocimiento De Imagenes</h3>
 										<p>Este programa permite el reconocimiento de distintas categorías de imágenes, en este caso identifica un rostro humano con tapabocas, una mano y un celular.</p>
 									</li>
