--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 										<p>Este programa permite el reconocimiento de distintas categorías de imágenes, en este caso identifica un rostro humano con tapabocas, una mano y un celular.</p>
 									</li>
 									<li>
-										<a href="reconocimiento_sonidos.html"><img class="Imgen" src="https://static.vecteezy.com/system/resources/previews/002/297/581/non_2x/voice-recognition-icon-sound-and-audio-vector.jpg" height="250px" width="250px"  alt=""></a>
+										<a href="reconocimiento_sonidos.html"><img class="Imgen" src="https://static.vecteezy.com/system/resources/previews/002/297/581/non_2x/voice-recognition-icon-sound-and-audio-vector.jpg" height="250px" width="250px" style="border-radius: 100%" alt=""></a>
 										<h3>Reconocimiento De Sonidos</h3>
 										<p>El programa de reconocimiento de voz permite identificar distintos sonidos, en este caso el programa reconoce los ladridos de un perro, los graznidos de un pato, el maullido de un gato y el sonido ambiental de una clase.</p>
 									</li>
